[tool.poetry]
name = "robonomics-interface"
version = "0.7.1"
description = "Robonomics wrapper over https://github.com/polkascan/py-substrate-interface created to facilitate programming with Robonomics"
authors = ["Pavel Tarasov <p040399@outlook.com>"]
license = "Apache-2.0"

homepage = "https://github.com/Multi-Agent-io/robonomics-interface"
repository = "https://github.com/Multi-Agent-io/robonomics-interface"

readme = "README.md"

keywords = [
    "python3",
    "wrapper",
    "blockchain",
    "substrate",
    "robonomics",
    "pypi-package"
]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
]

packages = [
    { include = "robonomicsinterface" },
]

include = [
    "LICENSE",
    ]
exclude = [
    ".gitignore",
    ]

[tool.poetry.scripts]
robonomics_interface = 'robonomicsinterface.robonomics_interface_io:cli'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Multi-Agent-io/robonomics-interface/issues"

[tool.poetry.dependencies]
python = ">3.6, <4.0"
substrate-interface = "^1.1.7"
click = "^8.0.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
