[metadata]
name = robonomics-interface-patara
version = 0.1
author = Pavel Tarasov
author_email = p040399@outlook.com
description = Robonomics wrapper over https://github.com/polkascan/py-substrate-interface created to facilitate programming with Robonomics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PaTara43/Robonomics-interface
project_urls =
    Bug Tracker = https://github.com/PaTara43/Robonomics-interface/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires=[
   'substrate_interface'
]
python_requires = >=3.6

[options.packages.find]
where = src
